# installer

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  solution.cmd
res/: toolchain.cmake  version.rc.in
src/: dialog.hpp  main.cpp  main.hpp  main.rc
src/ice/: context.hpp  task.hpp
